logs/offboard_pkg/build.make.455.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::AllTakeoff()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:114:17: error: ‘rate’ was not declared in this scope
  114 |                 rate.sleep();
      |                 ^~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
